<resources>
    <string name="action_settings">Settings</string>
    <string name="enter">進入</string>
    <string name="app_name">來自星星的APP</string>
    <string name="menu_0">Home</string>
<string name="menu_1">背景介紹</string>
    <string name="menu_2">演員角色</string>
<string name="menu_3">分集劇情</string>
    <string name="menu_4">OST</string>
    <string name="menu_5">經典對白</string>
<string name="menu_about">About</string>
    <string name="title_activity_menu">目錄</string>
    <string name="title_activity_intro">背景介紹</string>
    <string name="title_activity_cast">演員角色</string>
<string name="title_activity_highlight">分集劇情</string>
<string name="title_activity_ost">OST</string>
    <string name="title_activity_word">經典對白</string>
    <string name="str_intro1_title">簡介</string>
<string name="str_intro1">中文劇名：來自星星的你\n
韓文劇名：별에서 온 그대（前劇名：來自星星的男人）\n
英文劇名：Love From Star\n
電視台：韓國SBS電視臺\n
首播日期：2013年12月18日\n
播出時段：水木劇（韓國時間週三、週四晚間22:00）\n
集數：20集\n
導演：張太侑、吳忠煥\n
編劇：朴智恩（《賢內助女王》、《逆轉女王》、《順藤而上的你(小媳婦女王)》）\n
官方網站：http://tv.sbs.co.kr/lovefromstar/index.html\n
接檔劇：《繼承者們》\n
被接檔劇：《Three Days》\n
同檔劇：KBS《漂亮男人》《感激時代》；MBC《韓國小姐》\n\n


《來自星星的你》是韓國SBS電視臺2013年12月播出的水木特別企劃劇，以1609年（光海1年）《朝鮮王朝實錄》中記載的不明飛行物為基礎加以作家不可思議的想像力，講述從外星來到朝鮮時代的神秘男人都敏俊（金秀賢 飾）就此生活到400年之後的現代，在和身為國民頂級女演員的千頌伊（全智賢 飾）陷入愛情的過程中，不同星球的兩人消除彼此之間的誤解，克服危險追尋真愛的浪漫愛情喜劇。
這是全智賢時隔14年首次複出電視劇場，並且與曾在2012年的電影《盜賊同盟》中合作過的金秀賢再度搭檔。</string>
    <string name="str_intro2_title">劇情大綱</string>
<string name="str_intro2">400年前墜落在朝鮮的外星人，帶著他迄今為止4個世紀的秘密，獨自在首爾的天空下生活著。仍然擁有和初到地球時一樣的年輕英俊的外貌，並擁有著超天才的能力，他就是現任大學講師的都敏俊（金秀賢飾）。另一方面是目中無人冒冒失失的韓流明星千頌伊（全智賢 飾）。相鄰的男子和女子，迸出了火花，發現了和前生有關的牽絆。還有3個月就可以回到自己星球的都敏俊意外地陷入了和韓流明星千頌伊的愛情。究竟都敏俊3個月後能回到自己的星球嗎？和千頌伊在地球上的愛情會以happy ending結束嗎？
《來自星星的你》是韓國SBS電視臺自2013年12月18日起播出的水木特別企劃劇，講述外星男子都敏俊從外太空來到400年前的朝鮮並一直生活到現代，在和身為國民頂級女演員的千頌伊陷入愛情的過程中，不同星球的兩人消除彼此之間的誤解，克服危險追尋真愛的浪漫愛情喜劇。該劇由《錢的戰爭》、《風之畫員》、《樹大根深》的張太侑導演與《賢內助女王》、《逆轉女王》、《順藤而上的你》的朴智恩作家聯手打造。</string>
    <string name="str_intro3_title">企劃意圖</string>
    <string name="str_intro3">朝鮮王朝實錄光海20卷中殘留有記錄。1609年秋天，在江原道干城，原州，春川，襄陽，江陵等地幾乎在相同的時間裡都有一個無法得知的不明飛行物出沒。綜合目擊者們的陳述，得到的結果是那些未確認物體與葫蘆瓶或者洗漱盆之類的東西相似，會發出雷鳴般的聲音，並伴有亮光和濃煙出現。最令人驚訝的是，那個東西有著‘某種徵兆’似的在空中漂浮著緩緩飛行。究竟那會是什麼呢？
如果，那是‘從朝鮮飛來的UFO’\n\n

那個時候這片土地就有外星人定居的話？\n
400年前乘坐UFO來到朝鮮的外星人\n
如果與過去相同的面貌在首爾生活的話？\n
該電視劇就這樣在有點荒唐的想像中展開。\n
不知道隔壁住著誰，深諳孤獨，卻不瞭解新聞話題，這個悲哀的時代...\n
難道還有不知道的事嗎？\n
我的隔壁是不是住著某個可愛的外星人呢？\n
能否和他創造出奇跡般的甜蜜浪漫呢？這樣的事情。\n\n</string>
    <string name="str_cast1_title">角色介紹</string>
        <string-array name="str_arr_str_cast1_title">
            <item >都敏俊</item>
            <item >千頌伊</item>
            <item >李輝京</item>
            <item >劉世美</item>
            <item >其他角色</item>
         </string-array>
        <string-array name="str_arr_str_cast1_img">
         </string-array>
    <string-array name="str_arr_str_cast1_content">    
        <item ><strong>都敏俊；許允（金秀賢飾）</strong><br />
<br />
年齡不詳，現職業是大學講師<br />
1609年8月25日，掉落到朝鮮大地的外星人。<br />
404年間一如他第一次來到地球的時候<br />
以年輕而又俊美的外貌就那樣生活著。<br />
鷹的視力，狼的聽力，有著驚人的移動速度，<br />
能在一瞬間就能看到在不遠的將來將要發生在身邊的人身上的事。<br />
但是他將自己的這些能力全都徹底的隱藏起來，絕對不用。<br />
他計畫著在直到他離開地球的那一天都安靜而有品格地生活著，<br />
不對任何人造成任何妨礙。<br />
最基本的對於愛情非常不喜歡。<br />
對於人類所說的男女之間的愛情，<br />
最終他都當做是好奇心，嫉妒，情欲，佔有欲，憐憫，<br />
習以為常的當成錯覺來看待。<br />
但是，在他見到叫做千頌伊的女子的時候<br />
與敏俊事與願違的各種狀況就開始了。<br />
來到地球400年的這個俊美的外星男子，真的就開始了愛情。<br />
而他的存在正在一步步的浮出水面，<br />
處於危機當中。<br />
<br /></item>
        <item ><strong>千頌伊（全智賢飾）</strong><br />
<br />
28歲，TOP女演員，大學生<br />
曾經的國民妖精，現在的韓流女神。<br />
一句話來說，這個女人就是星星。<br />
初中和高中的時候經常都在拍攝現場，<br />
沒有完整地接受過一次正統的學校教育。<br />
跳過了本應該瞭解的同齡人的世界，<br />
	太早的進入到了毫無所知的成人的世界。<br />
	因此沒有常識，也沒有朋友。<br />
	雖然有家人....但就跟沒有一樣。<br />
	雖然周圍有很多人，但是嚴格計較起來<br />
	完美獨身一枚。<br />
	事情到底是這樣還是那樣都沒有關係。<br />
	對於星星來說沒有教養之類的東西也一樣。<br />
	但是突然有一天，<br />
	在讓人暈眩的頂端的頌伊<br />
	在她還沒來得及驚呼之前就那樣的墜落了！<br />
</item>

<item >
<strong>李輝京（朴海鎮飾）</strong><br />
<br />
28歲，S&amp;C集團小兒子<br />
雖然以新進職員的身份進入公司，<br />
實際職位是理事級。<br />
中學時代對作為《女學生》雜誌封面模特的千頌伊一見鍾情<br />
纏著身為財閥會長的爸爸任用她作為廣告模特<br />
但是千頌伊這個丫頭別說是表示感謝了<br />
連面都不給見<br />
他就想著總有一天一定要讓這個目中無人的丫頭<br />
跪在他面前給他承認錯誤，下了幾十次的決心要那麼做。<br />
但是在和頌伊相處的時候總是把這件事情忘得一乾二淨。<br />
原來在這種關係裡，錢多的人不是厲害的一方<br />
而是愛得更多的一方才是厲害的一方。<br />
在我和那個女孩子之間的我不僅是弱的一方，真的是超級弱的一方。<br />
結婚看看吧，演藝界活動什麼的就放下<br />
就在家呆著看著自己生活就行<br />
每天都在幸福地想像著<br />
而在那個女人身邊徘徊的事情終於爆發了<br />
遭受著全國人民的指責和傷害<br />
看著這樣的頌伊，輝京卻什麼也不能做<br />
<br />
</item>
        <item ><strong>劉世美（劉仁娜飾）</strong><br />
<br />
28歲，配角級演員<br />
有著仙女般的微笑，溫暖的語氣，<br />
無論誰看了都會有好感的一等新娘人選。<br />
無論是看家庭，還是看智慧，所有方面都不落後于千頌伊，<br />
只有在自負和外貌二方面比千頌伊遜色。<br />
中學時期，被朋友們拽到教室，破門而入的輝京便成為了世美的初戀。<br />
從中學開始就是頌伊最親密的朋友，<br />
但如果太過於瞭解的話就是敵人了。<br />
雖然對頌伊也有著憧憬的美好的心，<br />
實際上她對頌伊的嫉妒和想將頌伊踩在腳下的野心更大。<br />
<br /></item>
        <item ><strong>其他角色<br />
                </strong><br />
其他角色<strong>楊美妍（羅映姬飾）</strong><br />
54歲，頌伊母親<br />
年輕的時候夢想是成為演員。頌伊成為主角的同時，自己的生活也成為了主角。在頌伊成為大企業廣告模特並作為兒童演員快速成長的時候以頌伊的經紀人自居，隨意擺佈各種合約，掙得的錢全都放在自己的口袋裡。按照丈夫民九的意願離婚，把這所有的一切都看做是丈夫的錯誤。<br />
<br />
<strong>千民九（嚴孝燮飾）</strong><br />
56歲，頌伊父親<br />
向虛榮無度的妻子伸手要錢<br />
把自己父親遺留下來的建築也賣掉了，過著窮困潦倒的生活。<br />
雖然隨著女兒頌伊成為兒童演員成功生活立馬變好了，<br />
但是民九已經完全和家人疏遠了。<br />
挑起事端露餡和妻子離婚後，就沒辦法見到孩子了<br />
頌伊墜落15年之後才去找女兒。<br />
<br />
<strong>千允在（安宰賢飾）</strong><br />
18歲，高中生，頌伊弟弟<br />
極端憤世嫉俗的高中生，一年中一半的時間都是離家出走的狀態。<br />
雖然因為秀氣的外貌在街上得到很多選拔的機會<br />
但是沒有一點想從事那些職業的想法<br />
因為他覺得就是因為姐姐成為了藝人自己家才變成了這幅模樣<br />
《憔悴的他》是他感受最深刻的電影<br />
和秀氣的長相不一樣他連有外星人的事情也相信<br />
也相信在某個地方無論是狼族少年還是吸血鬼都有。<br />
<br />
<strong>洪社長（洪真京飾）</strong><br />
年齡不詳，漫畫屋主人<br />
和外星人比起來更像外星人的社區漫畫屋姐姐<br />
絕對的外貌至上主義，對男人的臉蛋非常敏感<br />
非常討厭漂亮的女生，代表性的就是千松伊<br />
在漫畫屋裡和自己人生觀緊密相連的訓言就是<br />
《令人暈眩的美貌，偉大的知性》<br />
<br />
<strong>張英牧（金昌完飾）</strong><br />
62歲，律師<br />
對於敏俊來說，英牧是他來到地球見到的第一個忠實的朋友和溫暖的兄弟。<br />
英牧第一次見到敏俊大約在40年前<br />
當時敏俊的名字還是許允<br />
英牧在許允的幫助下通過了司法考試成為了律師，<br />
他在某個瞬間突然知道<br />
許允不是普通人，事實上是......<br />
那之後英牧幫助許允洗清身份<br />
幫助敏俊隱瞞真實身份默默地為他做所有的事情。<br />
<br />
<strong>李載京（申成祿飾）</strong><br />
36歲，S&amp;C集團繼承者<br />
從外表來看是個非常好的人，有能力的business man。<br />
但是徹底隱藏在假面下的卻是一個典型的精神變態。<br />
一旦下定決心要折磨誰之後<br />
就會用讓人起雞皮疙瘩的程度去折磨那個人<br />
直達那個人從這個世界上消失的時候為止<br />
白天和黑夜完全判若兩人<br />
<br />
<strong>李范鐘（李正吉飾）</strong><br />
65歲，S&amp;C集團會長<br />
我們國家大企業的會長一般都那樣，不是那麼大的集團<br />
和數萬名公司職員比起來更急於照顧自己的骨肉<br />
大兒子載京一旦陷入困境或者與他有關的事情被察覺之後，<br />
為了保護兒子不論手段和方法，表現出極端的父愛。<br />
<br />
<strong>韓善英（李日花飾）</strong><br />
49歲，世美的母親<br />
在好的家庭裡漂亮的長大，和最好的新郎相見並結婚。<br />
一直相信自己過著幸福的人生......<br />
主演的媽媽接受著主演的待遇，那麼配角的媽媽也只能接受配角的待遇了<br />
在這個世界上善英也只是主人公朋友的媽媽這個角色而已<br />
這段時間以來從美妍那裡得到的屈辱要全都還給她....就這樣走上了復仇的路。<br />
<br />
<strong>劉碩（吳尚鎮飾）</strong><br />
31歲，檢察官，劉世美的哥哥<br />
有著雕塑般帥氣外貌的冰山王子<br />
雖然不會靈活變通，但是也沒有什麼惡意<br />
不會笑著說話的style，絕對的原則主義者<br />
在連續發生的藝人自殺事件當中發現了有可能是他殺的蹊蹺<br />
在這過程中在敏俊身上發現了一些異常便把他當做犯人了<br />
為了揭發敏俊的真面目一步步執著地緊緊地追蹤<br />
<br />
<br />
<strong>來源:百度百科</strong></item>                        
        </string-array>
        <string name="str_cast2_title">演員表</string>
        <string name="str_cast2_content">


\t角色\t演員\t備註\n\n

都敏俊;許允 \t金秀賢\t外星人;現任大學講師 \n\n
千頌伊 \t全智賢 \tTOP女演員;大學生 \n\n
劉世美 \t劉仁娜 \t配角級演員 \n\n
李輝景 \t樸海鎮 \tC集團小兒子;劉世美初戀 \n\n
張英牧 \t金昌完 \t律師;都敏俊秘密的唯一知情者 \n\n
千允在 \t安宰賢 \t高中生;千頌伊弟弟 \n\n
劉碩 \t吳尚鎮 \t檢察官;劉世美哥哥 \n\n
楊美妍 \t羅映姬 \t千頌伊母親 \n\n
千民九 \t嚴孝燮 \t千頌伊父親 \n\n
李載京 \t申成祿 \tC集團繼承人;李輝京哥哥 \n\n
李凡中 \t李正吉 \tC集團會長;李輝京父親 \n\n
洪銀娥 \t成秉淑 \t李輝京母親 \n\n
韓善英 \t李日花 \t劉世美母親 \n\n
洪福子\t 洪真京 \t漫畫屋主人 \n\n
安代表 \t趙熙奉 \t千頌伊所屬經紀公司代表 \n\n
韓宥拉 \t劉仁英 \t女演員 \n\n
瑞英 \t樸貞雅 \t女演員 \n\n
客串 \t柳俊相 \t李輝京上司 \n\n
千頌伊(少年) \t金賢秀\t ---- \n\n
李輝京(少年) \t趙承賢 \t---- \n\n
- \t金寶美 \t千頌伊助理 \n\n
- \t李利敬 \t李載京秘書 \n\n
哲秀\t曹世豪 \t漫畫店常客 \n\n
赫 \t南昌熙 \t漫畫店常客 \n\n
</string>
    <string name="str_cast3_title">角色關係</string>
    <string-array name="str_arr_word">
        <item >「你知道嗎？在朝鮮這個國家，\n下初雪的時候，任何謊言都是可用被原諒的。」\n</item>
        <item >「曾經有一瞬間，我希望時間永遠停止，只為了，無論如何都不願聽到的一句話。」\n</item>
        <item >「我的心，確實是沒辦法整理清楚了，總是忍不住回頭，還有就是總是忍不住後悔從來沒有像別人一樣，過一次平凡日子，沒能跟某個人去分享簡單的清晨和夜晚，沒能擁有一個會有人等我回來的家，沒能表達過喜歡一個人的真心。後悔那些，那些活不過一百年的人類都做過的，曾經被我嘲笑過太過渺小的那些事情，那些微小的、溫暖的、美麗的瑣碎日常，事到如今，突然想去做了。」\n</item>
        <item >「我這一次跌入谷底，有很多時候心情都很糟糕，但是也有一個好處，就是認清了很多人，真正站在我這邊的人和假裝跟我一伙的人，我覺得人生在世偶爾遇到困苦磨難，是上帝給我們機會來分辨清楚誰真誰假。」\n</item>
        <item >「我沒救過她嗎？我救過她多少次了。」\n</item>
        <item >「我要炸雞和啤酒。」\n</item>
        <item >「這麼說警察跟消防員就能獨攬全國人民的愛了。」\n</item>
        <item >「就像在沒有月亮的烏黑天空中的星星。」\n</item>
        <item >「如果有必要相遇就終究會遇到，如果遇不到就說明我們之間沒必要相遇。無論是否情願，該發生的事情總是會發生的，地球人把這種事情叫做命運。」\n</item>
        <item >「曾經有一瞬間，我希望時間永遠停止，只為了無論如何都不想聽到的一句話。」\n</item>
        <item >「以前，有只陶瓷兔子，那只兔子喜歡上了小女孩，還在她身邊看著她死去。那只兔子發誓再也不會犯愛上人的錯誤。但是你回答我，沒有愛情，故事怎麼以幸福結尾。」\n</item>
        <item >「愛情，是在性欲的基礎上體會到的性快感的奴隸，是人在那過程之中，制造出的無比快樂無比甜蜜的幻想。愛情真的是永恆的嗎?我敢斷言那種所謂的愛情是不會永恆的。愛情的保質期是遵循自然法則的，人類絕對無法超出這個限制。說愛情是偉大的，只是因為它實現了種族的延續和繁衍，再沒有其他的理由了。所以，只因為愛情所帶來的短暫幻像，就犧牲自己最珍貴的東西的那種行為，請大家不要去做。」\n</item>
        <item >「嫉妒屬於人類感情當中最低等的，笨拙幼稚的感情。因為這是對方的愛意有可能會向著他人的恐而產生的感情，與憤怒差不多性質的這種感情，會從幼兒期開始萌芽，看到媽媽抱著別的孩子高興的模樣，就會耍脾氣，吐出吃完的食物，吸吮手指的行為就是例子了，我們通常稱之為退化，就算長大成人，自尊感弱的人愛上別人，就會經過這種退化過程，怕對方被某人奪走，做出笨拙的行為與言辭，以此表達嫉妒的感情。」\n</item>
        <item >「當然，嫉妒不止表現在這一方面，還有你沒得到的，你覬覦的東西也會讓你產生這種感情，你看到別人過得比你好吧，經歷你沒經歷的，你嫉妒對吧?呵呵……嫉妒是最低級最幼稚的感情，只有缺乏自信而且自卑的人才會有，所以我從來沒有那種感覺。」\n</item>
        <item >「人生在世可不是這樣的，只要幫上一次，就會兩次，三次，繼續求人幫忙，這才是人生在世。還有，有機會報答的日子，是不會有的。人生，可沒有足夠讓人懂事的、那麼漫長的時間。幫一下忙，並沒能改善什麼，最終該發生的事情還是發生了，糟糕的事情變得更糟。」\n</item>
        <item >「我本以為時刻都准備著，到了離開的時候，可以毫無留戀地離開的。可是我的時間快到了，卻還剩下了一個人，有著還沒有解決的疑惑、眷戀、悲傷。這和四百年前似曾相識的奇妙的狀況，讓我感到害怕。我本相信死亡是結束，是消失，但是好像不是那樣。難道是本以為已經永遠消失的那個人，在經過了漫長歲月之後，又重新出現在我面前了嗎?」\n</item>
        <item >「想生活的輕松的話可以活的很輕松，但是如果想活的累的話，也會非常累。如果只愛自己的話可以活得輕松，如果開始喜歡上別人的話，人生會開始變得糾纏不清，讓人疲憊。人生原來如此。沒有時間讓你做所謂的心理准備，冷不丁，莫名其妙，無可奈何地突然闖入。本來初戀就是最讓人困惑的。會想是我吃錯藥了，還是我精神失常還是瘋了……」\n</item>
        <item >「不管你了不了解這個世界，這個世界都不會讓著你。就算你無止盡地墜入谷底，就算你覺的自己一身清白，實在被冤死的委屈，也沒人會懂你的心思。你現在就站在了懸崖最邊上，一個不小心就會墜入萬丈深淵消失得無影無蹤。」\n</item>
        <item >「我做了個幸福的夢，然後我懂了，醒過來之後，幸福的夢會讓我感到更加不幸，一開始我就不該做幸福的夢。</item>
        <item >「知道人類為什麼害怕死亡嗎?因為忘卻。在我存在的世界，就算我消失，世界卻依然如故，只有我會被忘卻。我不會害怕，即使我離開我所生活的這個世界前往另一個世界;即使沒有任何人記得我，也毫無關系。可現在，我有點怕了。因為產生了一個不想被忘卻的人，如今我就要前往另一個世界了，可為何偏偏是現在?」\n</item>
        <item >「通過長久以來的經驗明白了，若不想失去某人，就得徹底隱藏自己的事實，可我今天，為了失去千頌伊，而對她說出了真實身份，就是希望她能從我身邊逃走，害怕我……」\n</item>
        <item >「喜歡她，我喜歡她……我，喜歡那個人。兩個月也好，一個月也好，我只是想跟她在一起;就算這樣下去會無法離開，就算像您之前說過的，我會死在這個地方，只要可以永遠留在幸福的裡，不醒來……我，想那樣做，真的不可以嗎……不可以嗎?」\n</item>
        <item >「第一次有了想保護某人的想法，但卻什麼也沒有辦到而失去了她……」\n</item>
        <item >「我要經歷多少次，連再見都來不及說的分離。」\n</item>
        <item >「聽說人心就是如此，看到處的地方比自己好的人，不是想著我也要去那裡，而是你也來我這泥潭裡吧，下來吧下來吧。但是，不好意思，我是不會下去的，你生活的那片泥潭，怨恨某人，嫉妒某人，如地獄般的地方，我不會的，所以不要再向我招手 叫我下來了。」\n</item>
        <item >「我本相信死亡是結束，是消失，但是好像不是那樣。難道是本以為已經永遠消失的那個人，在經過了漫長歲月之後，又重新出現在我面前了嗎?」\n</item>
        <item >「千頌伊，你周圍的人之所以會離你而去，也是有原因的。在埋怨周圍的人沒有站在你這邊之前，應該考慮一下，為什麼沒能把那些人變成你這邊的。也許你的孤獨是你的錯。」\n</item>
        <item >「但是我......為什麼覺得你像是在說謊呢？」\n</item>
        <item >「要我告訴你 怎樣才能不被人傷害嗎\n不要付出也不要接受任何東西\n不要期待任何事情 那麼也不會失望也不會受傷了。」\n</item>
        <item >「我發現啊，我喜歡的人，\n也喜歡我這件事，並不簡單呢。\n所謂奇跡，就是指的這種吧。」\n</item>
        <item >「小時候我每次害怕的時候都會喊爸爸,可是現在我會喊另一個名字,第一次愛上一個人超過了爸爸,有了一個從早到晚都想跟他一起度過的人,就算他不停地推開我，趕我走,我都邁不開腳步,就算想盡辦法去討厭他,卻還是做不到,總是會做一個悲傷的夢,夢見他很愛我。」\n</item>
        <item >「在我存在的世界，就算我消失，世界依然如故，只有我會被忘卻。」\n</item>
        <item >「被剝奪了依賴感的人，在直面現實之前，會經歷五個情緒階段： 第一階段，憤怒； 第二階段，否定現實； 第三階段，妥協； 第四階段，經過漫長的憂郁期； 最後就會到達接受的階段。」\n</item>
    </string-array>
    <string-array name="str_arr_ost_title">
        <item >Part.1 Lyn-My destiny 我的命運</item>
        <item >Part.2 K.Will - 像星星一樣</item>
        <item >Part.3 Younha - 來自星星的你</item>
        <item >Part.4 孝琳 - 再見</item>
        <item >Part.5 Just - I Love You</item>
        <item >Part.6 許閣 - 像今天一樣的眼淚</item>
        <item >Part.7 成詩京 - 你的每個瞬間</item>
        <item >Part.8 金秀賢-你家門前</item>
    </string-array>
</resources>